@@ -74,6 +74,11 @@ public interface ItemLists {
 	 * List of Buttons.
 	 */
 	public static List<String> BUTTONS = new ArrayList<>(Arrays.asList("STONE_BUTTON","ACACIA_BUTTON","BIRCH_BUTTON","DARK_OAK_BUTTON","JUNGLE_BUTTON","OAK_BUTTON","SPRUCE_BUTTON","CRIMSON_BUTTON","WARPED_BUTTON","POLISHED_BLACKSTONE_BUTTON"));
+
+	/**
+	 * List of materials that will activate redstone when triggered by a projectile.
+	 */
+	public static List<String> PROJECTILE_TRIGGERED_REDSTONE = new ArrayList<>(Arrays.asList("ACACIA_BUTTON","BIRCH_BUTTON","DARK_OAK_BUTTON","JUNGLE_BUTTON","OAK_BUTTON","SPRUCE_BUTTON","CRIMSON_BUTTON","WARPED_BUTTON","ACACIA_PRESSURE_PLATE","BIRCH_PRESSURE_PLATE","DARK_OAK_PRESSURE_PLATE","JUNGLE_PRESSURE_PLATE","OAK_PRESSURE_PLATE","SPRUCE_PRESSURE_PLATE","HEAVY_WEIGHTED_PRESSURE_PLATE","LIGHT_WEIGHTED_PRESSURE_PLATE","CRIMSON_PRESSURE_PLATE","WARPED_PRESSURE_PLATE"));
 	
 	/**
 	 * Config-useable material groups.
